v5.1.0/_sources/generated/pcdsdevices.areadetector.detectors.PCDSAreaDetectorBase.rst.txt
pcdsdevices.areadetector.detectors.PCDSAreaDetectorBase
=======================================================

.. currentmodule:: pcdsdevices.areadetector.detectors

.. autoclass:: PCDSAreaDetectorBase

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - configuration_names
          - :class:`~ophyd.signal.ArrayAttributeSignal`
          - 
          - 
          - config
          - Inherited from :class:`~ophyd.areadetector.detectors.DetectorBase`
    
        * - cam (ADComponent)
          - :class:`~ophyd.areadetector.cam.CamBase`
          - 
          - 
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: collect_asset_docs
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: dispatch
    .. automethod:: find_signal
    .. automethod:: get
    .. automethod:: get_asyn_digraph
    .. automethod:: get_asyn_port_dictionary
    .. automethod:: get_plugin_by_asyn_port
    .. automethod:: get_plugin_graph_edges
    .. automethod:: make_data_key
    .. automethod:: missing_plugins
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: validate_asyn_ports
    .. automethod:: visualize_asyn_digraph
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: ad_root
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    